changed email adress and cursor effect on certificates

--- a/app/index.html
+++ b/app/index.html
@@ -487,7 +487,7 @@
 	 		<h2 class="basic-section__main-header">Reach me at</h2>
 			<ul class="footer__contact">
 				<li><a class="footer__link" href="https://www.google.pl/maps/place/Pozna%C5%84/@52.4039644,16.9074636,13z/data=!4m5!3m4!1s0x470444d2ece10ab7:0xa4ea31980334bfd1!8m2!3d52.406374!4d16.9251681" target="_blank" rel="noopener"><span class="fa fa-map-marker"></span> Poznań, Poland</a></li>
-				<li><a class="footer__link" href="mailto:piomul6473@gmail.com" target="_top"><span class="fa fa-envelope footer__link--no-uderline"></span> piomul6473@gmail.com</a></li>
+				<li><a class="footer__link" href="mailto:piotrmularski.it@gmail.com" target="_top"><span class="fa fa-envelope footer__link--no-uderline"></span> piotrmularski.it@gmail.com</a></li>
 				<li><a class="footer__link" href="https://www.linkedin.com/in/piotrmularski/?locale=en_US" target="_blank" rel="noopener" ><span class="fa fa-linkedin-square footer__link--no-uderline"></span> Linkedin</a></li>
 				<li><a class="footer__link" href="https://github.com/Piotr-Mularski/" target="_blank" rel="noopener"><span class="fa fa-github footer__link--no-uderline"></span> GitHub</a></li>
 				
